# TopoSmplJAX

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TopoSmplJAX.code-workspace  pyproject.toml
LICENSES/: ASSET_BOUNDARY.md  CODE_AND_CONTENT.md  README.md
_bundles/: README.md
benchmarks/: README.md  benchmark_mode1_fixed_topology.py
common/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  pyproject.toml
contracts/: api_contract.md
docs/: README.md  architecture.md  documentation_governance.md  milestone_m2_static_generator.md  overview.md  project_overview.md
examples/: benchmark_jax_quality_pipeline.py  benchmark_static_generation.py  centroid_grad.py  m1_fixed_topology_mode_demo.py  m1_polygon_volume_gmsh_demo.py  m3_ad_restart_workflow_demo.py  m3_adaptive_quad_demo.py  m3_adaptive_remesh_demo.py  m3_adaptive_tri_export_demo.py  m3_boundary_refine_demo.py  m3_diagnostics_io_demo.py  m3_jax_optimize_quad_quality.py  m3_sphere_tet_setup_demo.py  m3_surface_patch_front_demo.py
experiments/: README.md
notebooks/: m3_quad_tet_workflows.ipynb  milestone_static_generator_bench.ipynb
outputs/: README.md
private_data/: README.md
tests/: README.md  test_ad_extended_workflows.py  test_ad_modes.py  test_ad_restart_workflow.py  test_generators.py  test_m3_boundary_and_refine.py  test_m3_diagnostics_io.py  test_m3_mutation_and_loop.py  test_m3_quad_and_sphere.py  test_m3_tet_adaptive.py  test_milestone_static_generator.py  test_mode1_arbitrary_domains.py  test_mode1_fixed_topology.py  test_mode1_workflow.py  test_model_pipeline.py  (+4 more)
tools/: README.md  (+1 more)
(+261 files in other folders)
