[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmshjax"
version = "0.1.0"
description = "AD mesh creation toolkit for JAX"
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4.35",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8",
]
viz = [
  "matplotlib>=3.8",
  "pyvista>=0.43",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
