[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TopoSmplJAX"
version = "0.1.0"
description = "Combined TopoJAX and smplJAX toolkit for JAX."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4.35",
  "jaxlib>=0.4.35",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8",
]
repair = [
  "pymeshfix>=0.16",
]
viz = [
  "matplotlib>=3.8",
  "pyvista>=0.43",
  "trimesh>=4.0",
  "viser>=0.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
topojax = ["py.typed"]
smpljax = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
